// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiScreenReaderOnly adds an accessibility class to a child element and combines other classNames (foo, bar) given as props on the child 1`] = `
<p
  class="euiScreenReaderOnly foo bar css-4l8ha9-euiScreenReaderOnlyStyles"
>
  This paragraph is not visibile to sighted users but will be read by screenreaders.
</p>
`;

exports[`EuiScreenReaderOnly adds an accessibility class to a child element when used with no props 1`] = `
<p
  class="euiScreenReaderOnly css-4l8ha9-euiScreenReaderOnlyStyles"
>
  This paragraph is not visibile to sighted users but will be read by screenreaders.
</p>
`;

exports[`EuiScreenReaderOnly will show on focus 1`] = `
<a
  class="euiScreenReaderOnly--showOnFocus css-1tcxaj-euiScreenReaderOnlyStyles"
  href="#"
>
  Link
</a>
`;
